# vvid

./: .gitignore  README.md  dataset.csv  homework.ipynb  pyproject.toml
Practice_1/: Practice1.ipynb  Practice1_.ipynb  README.md
Practice_2/: Practice2_.ipynb  Practice2_7.ipynb  Practice2_8.ipynb
Practice_3/: Practice3.ipynb  README.md
Practice_4/: Practice4.ipynb  README.md
Practice_5/: Practice5.ipynb  README.md
Practice_6/: Practice6.ipynb  README.md
Практическое занятие №2/: Practice2.ipynb  README.md
Практическое занятие №3/: Practice3.ipynb  README.md
