[tool.poetry]
name = "vvid"
version = "0.1.0"
description = ""
authors = ["ksiim <makskrutchev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
torchinfo = "^1.8.0"
torchvision = "^0.18.0"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
